--- a/Person/Base.lproj/Main.storyboard
+++ b/Person/Base.lproj/Main.storyboard
@@ -285,49 +285,55 @@
                                             <rect key="frame" x="0.0" y="0.0" width="185" height="264"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rectangle.and.pencil.and.ellipsis.rtl" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="VGW-xI-cFG">
-                                                    <rect key="frame" x="0.0" y="0.0" width="185" height="18.5"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="facebook" translatesAutoresizingMaskIntoConstraints="NO" id="VGW-xI-cFG">
+                                                    <rect key="frame" x="0.0" y="0.0" width="185" height="137"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sTS-wg-4u9">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sTS-wg-4u9">
                                                     <rect key="frame" x="8" y="144" width="167" height="32"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="26"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Labeldnvbdfjvbdv" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xCz-Fg-iQW">
-                                                    <rect key="frame" x="8" y="183" width="169" height="32"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="26"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eqv-L7-DBB">
-                                                    <rect key="frame" x="8" y="225" width="169" height="32"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="169" id="hAj-n5-tzH"/>
+                                                        <constraint firstAttribute="height" constant="32" id="8pl-cE-3vB"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Age" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xCz-Fg-iQW">
+                                                    <rect key="frame" x="8" y="183" width="169" height="24"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Designation" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eqv-L7-DBB">
+                                                    <rect key="frame" x="8" y="217" width="169" height="24"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
-                                            <color key="backgroundColor" systemColor="systemOrangeColor"/>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="sTS-wg-4u9" secondAttribute="trailing" constant="8" id="0ac-Eo-G6N"/>
                                                 <constraint firstItem="VGW-xI-cFG" firstAttribute="leading" secondItem="fb9-DQ-xTv" secondAttribute="leading" id="0dd-Gh-MOY"/>
-                                                <constraint firstItem="xCz-Fg-iQW" firstAttribute="top" secondItem="sTS-wg-4u9" secondAttribute="bottom" constant="8" id="6he-mm-E9D"/>
-                                                <constraint firstAttribute="trailing" secondItem="sTS-wg-4u9" secondAttribute="trailing" constant="10" id="9fU-De-5RQ"/>
+                                                <constraint firstItem="sTS-wg-4u9" firstAttribute="top" secondItem="VGW-xI-cFG" secondAttribute="bottom" constant="7" id="8m7-Fn-hBF"/>
+                                                <constraint firstItem="Eqv-L7-DBB" firstAttribute="top" secondItem="xCz-Fg-iQW" secondAttribute="bottom" constant="10" id="Qvw-bq-4ey"/>
                                                 <constraint firstAttribute="trailing" secondItem="Eqv-L7-DBB" secondAttribute="trailing" constant="8" id="S82-ci-DzS"/>
-                                                <constraint firstItem="sTS-wg-4u9" firstAttribute="centerY" secondItem="fb9-DQ-xTv" secondAttribute="centerY" id="WHW-79-Fke"/>
+                                                <constraint firstItem="VGW-xI-cFG" firstAttribute="centerX" secondItem="Eqv-L7-DBB" secondAttribute="centerX" id="UVB-VU-7Kr"/>
                                                 <constraint firstAttribute="trailing" secondItem="VGW-xI-cFG" secondAttribute="trailing" id="ZbX-kW-U52"/>
                                                 <constraint firstItem="VGW-xI-cFG" firstAttribute="top" secondItem="fb9-DQ-xTv" secondAttribute="top" id="bkm-9v-rRY"/>
                                                 <constraint firstItem="xCz-Fg-iQW" firstAttribute="leading" secondItem="fb9-DQ-xTv" secondAttribute="leading" constant="8" id="cO9-CH-qZx"/>
+                                                <constraint firstItem="sTS-wg-4u9" firstAttribute="leading" secondItem="xCz-Fg-iQW" secondAttribute="leading" id="epB-JH-9Ox"/>
+                                                <constraint firstAttribute="trailing" secondItem="sTS-wg-4u9" secondAttribute="trailing" constant="10" id="glh-NJ-mqi"/>
                                                 <constraint firstAttribute="trailing" secondItem="xCz-Fg-iQW" secondAttribute="trailing" constant="8" id="nkV-Qu-6s1"/>
-                                                <constraint firstItem="VGW-xI-cFG" firstAttribute="leading" secondItem="sTS-wg-4u9" secondAttribute="trailing" constant="-175" id="xX8-VP-LQj"/>
-                                                <constraint firstItem="sTS-wg-4u9" firstAttribute="leading" secondItem="fb9-DQ-xTv" secondAttribute="leading" constant="8" id="yeC-7K-wZl"/>
+                                                <constraint firstItem="xCz-Fg-iQW" firstAttribute="top" secondItem="sTS-wg-4u9" secondAttribute="bottom" constant="7" id="pxy-SN-T10"/>
+                                                <constraint firstAttribute="bottom" secondItem="sTS-wg-4u9" secondAttribute="bottom" constant="88" id="qhZ-Te-LGB"/>
+                                                <constraint firstItem="sTS-wg-4u9" firstAttribute="top" secondItem="VGW-xI-cFG" secondAttribute="bottom" constant="7" id="yut-yi-X1K"/>
                                             </constraints>
                                         </collectionViewCellContentView>
-                                        <color key="backgroundColor" systemColor="linkColor"/>
                                         <size key="customSize" width="185" height="264"/>
+                                        <connections>
+                                            <outlet property="contactAge" destination="xCz-Fg-iQW" id="zSw-gf-Zkg"/>
+                                            <outlet property="contactDesignation" destination="Eqv-L7-DBB" id="jO4-Gj-fjG"/>
+                                            <outlet property="contactImage" destination="VGW-xI-cFG" id="DvR-vy-eEP"/>
+                                            <outlet property="contactName" destination="sTS-wg-4u9" id="9h1-zH-n5f"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -369,23 +375,17 @@
         </scene>
     </scenes>
     <resources>
+        <image name="facebook" width="162.5" height="162.5"/>
         <image name="list.dash" catalog="system" width="128" height="85"/>
-        <image name="rectangle.and.pencil.and.ellipsis.rtl" catalog="system" width="128" height="92"/>
         <image name="square.grid.2x2" catalog="system" width="128" height="114"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="linkColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="secondarySystemGroupedBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemYellowColor">
             <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
